# ocr-backend

./: .gitignore  README.md  config.py  main.py  models.py  ocr_service.py  pyproject.toml  receipt_parser.py  requirements.txt  transformers.py
